@@ -1,1 +1,2 @@
 --add-opens java.base/java.lang=ALL-UNNAMED
+--enable-native-access=ALL-UNNAMED
